@@ -1,3 +1,8 @@
+2002-09-29  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/wchar.h (__VALIST): Correct typo in __GNUC__ guard.
+	(FILE): Qualify with __CSTD when in global namespace.
+
 2002-09-28  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/io.h: #include stddef.h with __need_wchat_t.
